test/syntax/fail/attrs/deprecated/arg_not_a_string.sync
[@deprecated(5)]
let f x = x
