test/syntax/fail/attrs/deprecated/arg_not_a_string.expected
File "dummy.sync", line 1, characters 3-13:
 1 | [@deprecated(5)]
       ^^^^^^^^^^

Error: The 'deprecated' attribute takes either no arguments or a single
       string argument.
